UI-3228  [Social] Alignment bugs on Profile and Connection

--- a/webapp/portlet/src/main/webapp/skin/less/uiConnectionsPortlet/Style.less
+++ b/webapp/portlet/src/main/webapp/skin/less/uiConnectionsPortlet/Style.less
@@ -59,3 +59,10 @@
 		background-repeat: no-repeat;
 	}
 }
+.uiSocApplication {
+	.uiGrayLightBox label {
+		line-height: 18px;
+		margin: 0;
+		vertical-align: middle;
+	}
+}
